# theremin

./: .clang-format  CMakeLists.txt  README.md
cmake/: CopyLeapLibrary.cmake
dependencies/: CMakeLists.txt
libleapcpp/: CMakeLists.txt  README.md
libleapcpp/include/: LeapCpp.h
libleapcpp/src/: ConnectionImpl.cpp  ConnectionImpl.h  Exception.cpp  Exception.h  LeapCpp.cpp
theremin/: AudioProcessor.cpp  AudioProcessor.h  Bounds.h  CMakeLists.txt  CallbackListener.h  FrameProcessor.cpp  FrameProcessor.h  FrequencyCalculator.cpp  FrequencyCalculator.h  HandTracker.cpp  HandTracker.h  LevelCalculator.cpp  LevelCalculator.h  MainComponent.cpp  MainComponent.h  MessageQueue.cpp  MessageQueue.h  Oscillator.cpp  Oscillator.h  PhaseChangeCalculator.cpp  PhaseChangeCalculator.h  ThereMessage.h  TrackingFrame.h  main.cpp
